[gd_scene load_steps=13 format=3 uid="uid://fw01nvnfbg0v"]

[ext_resource type="Script" path="res://scenes/script/drone.gd" id="1_llu1n"]
[ext_resource type="Texture2D" uid="uid://c4xlm6p6ai8kb" path="res://graphics/enemies/drone.png" id="1_tvx54"]
[ext_resource type="Shader" path="res://scenes/objects/drone.gdshader" id="2_favym"]
[ext_resource type="Texture2D" uid="uid://dmx1laotg30h5" path="res://graphics/explosions/explosion_3.png" id="3_ali7q"]
[ext_resource type="AudioStream" uid="uid://dm7kyml837s1k" path="res://audio/explosion.wav" id="5_pp08y"]
[ext_resource type="AudioStream" uid="uid://bra042wfgf44a" path="res://audio/solid_impact.ogg" id="5_xhw80"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgur8"]
shader = ExtResource("2_favym")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ykoi7"]
radius = 1053.03

[sub_resource type="CircleShape2D" id="CircleShape2D_3ok71"]
radius = 74.0068

[sub_resource type="Animation" id="Animation_16opn"]
resource_name = "Explosion"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("droneSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_movment"
}]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Audios/AudioStreamPlayer2D2")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_pp08y")
}],
"times": PackedFloat32Array(0.15)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_cy1f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mrw6j"]
_data = {
"Explosion": SubResource("Animation_16opn"),
"RESET": SubResource("Animation_cy1f4")
}

[node name="drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_llu1n")

[node name="droneSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qgur8")
rotation = 1.5708
texture = ExtResource("1_tvx54")

[node name="droneArea" type="Area2D" parent="."]

[node name="colision" type="CollisionShape2D" parent="droneArea"]
shape = SubResource("CircleShape2D_ykoi7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3ok71")

[node name="Explosion" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ali7q")
hframes = 8
vframes = 8
frame = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mrw6j")
}

[node name="HitCooldowm" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Audios" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audios"]
stream = ExtResource("5_xhw80")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Audios"]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="body_entered" from="droneArea" to="." method="_on_drone_area_body_entered"]
[connection signal="body_exited" from="droneArea" to="." method="_on_drone_area_body_exited"]
[connection signal="timeout" from="HitCooldowm" to="." method="_on_hit_cooldowm_timeout"]
